src/mailgo.css
.mailgo-modal p,
.mailgo-modal span,
.mailgo-modal strong,
.mailgo-modal a {
  margin: 0;
  padding: 0;
  font-size: 100%;
  line-height: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.mailgo-modal strong {
  font-weight: 700;
}

.mailgo-modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  overflow: hidden;
  z-index: 100000;
  font-size: 15px;
}

.mailgo-title {
  display: block;
  margin-bottom: 5px;
}

.mailgo-details {
  margin-bottom: 10px;
}

.mailgo-details p {
  font-size: 12px;
  margin-top: 3px;
  margin-bottom: 3px;
}

.mailgo-modal-background {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(10, 10, 10, 0.75);
  opacity: 0.8;
}

.mailgo-modal-content {
  z-index: 1000;
  box-sizing: content-box;
  text-align: center;
  width: 200px;
  background-color: #fff;
  border-radius: 6px;
  box-shadow: 0 2px 6px 0 rgba(10, 10, 10, 0.39);
  color: #4a4a4a;
  display: block;
  overflow: auto;
  padding: 1.25rem;
}

.mailgo-modal-content:hover {
  box-shadow: 0 6px 20px rgba(10, 10, 10, 0.23);
}

.mailgo-modal-content a {
  display: block;
  color: #4a4a4a;
  border-radius: 4px;
  text-decoration: none;
}

.mailgo-modal-content a {
  padding: 10px;
}

.mailgo-modal-content a.mailgo-open:hover,
.mailgo-modal-content a.mailgo-copy:hover {
  background-color: rgba(0, 0, 0, 0.08);
}

.mailgo-modal-content a.outlook {
  color: #0072c6;
}

.mailgo-modal-content a.gmail {
  color: #d44638;
}

.mailgo-modal-content a.outlook:hover {
  background-color: rgba(0, 114, 198, 0.08);
}

.mailgo-modal-content a.gmail:hover {
  background-color: rgba(212, 70, 56, 0.08);
}

.mailgo-modal-content a.mailgo-copy {
  padding: 16px 10px;
}

.mailgo-modal-content a.mailgo-by {
  display: block;
  font-size: 8px;
  margin-top: 1rem;
  padding: 0px;
  font-style: italic;
}

.mailgo-weight-500 {
  font-weight: 500;
}

